@@ -68,14 +68,8 @@ main (int argc, char *argv[])
   // NixHelper to install nix-vector routing
   // on all nodes
   Ipv4NixVectorHelper nixRouting;
-  Ipv4StaticRoutingHelper staticRouting;
-
-  Ipv4ListRoutingHelper list;
-  list.Add (staticRouting, 0);
-  list.Add (nixRouting, 10);
-
   InternetStackHelper stack;
-  stack.SetRoutingHelper (list); // has effect on the next Install ()
+  stack.SetRoutingHelper (nixRouting); // has effect on the next Install ()
   stack.Install (allNodes);
 
   NetDeviceContainer devices12;
